<resources>
    <string name="app_name">Xpense</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>

    <string name="title_amount">Amount</string>
    <string name="title_category">Category</string>
    <string name="title_note">Note</string>
    <string name="title_date">Date</string>
    <string name="title_currency">Currency</string>

    <string name="expense_label">Add expense</string>
    <string name="expense_edit_label">Edit expense</string>
    <string name="expense_delete_message">Do you want to delete this item?</string>

    <string name="category_label">New Category</string>
    <string name="project_label">New Project</string>
    <string name="project_name_hint">Title</string>
    <string name="project_location_hint">Location</string>
    <string name="project_currency_hint">Currency</string>
    <string name="category_name_hint">Name</string>

    <string name="google_play_services_error">There is a problem with Google Play Services</string>

    <string name="default_value_empty">""</string>
    <string name="default_value_none">None</string>
    <string name="default_value_currency">$</string>

    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_history">History</string>
    <string name="menu_statistics">Statistics</string>

    <string name="version_preference_title">Version</string>
    <string name="version_preference_key">version_preference_key</string>

    <string name="author_preference_title">Author</string>
    <string name="author_preference_summary">Tomasz Morcinek</string>
    <string name="author_preference_link">http://www.morcinek.co.uk/</string>

    <string name="code_preference_title">App code</string>
    <string name="code_preference_summary">Checkout application code on Github.</string>
    <string name="code_preference_link">https://github.com/tmorcinek/xpense</string>

    <string name="rate_preference_title">Rate App</string>
    <string name="rate_preference_summary">Rate the application in Google Play.</string>
    <string name="rate_preference_link">market://details?id=com.morcinek.xpense</string>

    <string name="more_apps_preference_title">More Apps</string>
    <string name="more_apps_preference_summary">Check out more of my applications.</string>
    <string name="more_apps_preference_link">market://search?q=pub:Tomasz Morcinek</string>

    <string name="email_me_preference_title">Send Feedback</string>
    <string name="email_me_preference_summary">Send comments regarding this application.</string>
    <string name="email_me_preference_subject">[Xpense Android App] Feedback</string>
    <string name="email_me_preference_data">mailto:tomasz.morcinek@gmail.com</string>

    <string name="share_preference_title">Share this app</string>
    <string name="share_preference_summary">Share this application with friends.</string>
    <string name="share_preference_subject">Invitation to Xpense</string>
    <string name="share_preference_body">Hey,\n\nI have started using Xpense.\n
        It is a cool app that was designed to help you manage your finances.\n
        You can add expenses, categories, and get a lot of statistics regarding your montly, weekly or daily expenditures.\n\n
        Get Xpense from: http://play.google.com/store/apps/details?id=com.morcinek.xpense</string>
    <string name="share_preference_data">mailto:</string>

</resources>
